<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search_view_radius_white"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:contentDescription="@null"
                android:layout_margin="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/et_title"
                android:src="@drawable/ic_todo_close" />


            <TextView
                android:id="@+id/tv_input_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                tools:text="0/2000"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@+id/iv_close"
                app:layout_constraintEnd_toStartOf="@+id/iv_close"
                app:layout_constraintBottom_toBottomOf="@id/iv_close" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_title"
                android:layout_width="0dp"
                android:layout_height="177dp"
                android:padding="4dp"
                android:inputType="text"
                android:layout_marginTop="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radius_search_view_bg"
                android:ellipsize="end"
                android:hint="@string/todo_edit_input_hint"
                android:gravity="top|start"
                android:scrollbarStyle="insideOverlay"
                android:overScrollMode="always"
                android:scrollbarFadeDuration="0"
                android:fadeScrollbars="false"
                android:maxLength="2000"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/v_top_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_close" />

            <View
                android:id="@+id/v_top_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@+id/et_title"
                app:layout_constraintBottom_toTopOf="@id/iv_clock2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/iv_clock2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:padding="12dp"
                android:contentDescription="@null"
                app:layout_constraintEnd_toStartOf="@+id/tv_clock_text"
                android:src="@drawable/ic_clock_gray_25dp"
                app:layout_constraintStart_toStartOf="@+id/et_title"
                app:layout_constraintBottom_toTopOf="@+id/rv_date_selector"
                app:layout_constraintTop_toBottomOf="@+id/et_title" />

            <TextView
                android:id="@+id/tv_clock_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:gravity="center|end"
                android:text="@string/todo_do_not_remind"
                android:textColor="#9b9b9b"
                android:textSize="15sp"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/iv_clock2"
                app:layout_constraintEnd_toStartOf="@+id/tv_clear"
                app:layout_constraintStart_toEndOf="@+id/iv_clock2"
                app:layout_constraintTop_toTopOf="@+id/iv_clock2" />

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/selector_date_tag"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingTop="2dp"
                android:paddingEnd="12dp"
                android:paddingBottom="2dp"
                android:layout_marginEnd="8dp"
                android:text="@string/alert_clear"
                android:textAlignment="center"
                android:textColor="@drawable/selector_date_text_tag"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_clock_text"
                app:layout_constraintEnd_toStartOf="@+id/sp_remind"
                app:layout_constraintStart_toEndOf="@+id/tv_clock_text"
                app:layout_constraintTop_toTopOf="@+id/tv_clock_text" />

            <androidx.legacy.widget.Space
                android:id="@+id/sp_remind"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/tv_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_clock_text"
                app:layout_constraintTop_toTopOf="@+id/tv_clock_text" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_date_selector"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:choiceMode="multipleChoiceModal"
                android:fadeScrollbars="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/date_time_pick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_clock2" />


            <tw.com.chainsea.custom.view.picker.DateTimePickerLayout
                android:id="@+id/date_time_pick"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/v_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_date_selector" />

            <View
                android:id="@+id/v_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#4d4d4d"
                app:layout_constraintBottom_toTopOf="@+id/gl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_time_pick" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="44dp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:background="@android:color/transparent"
                android:text="@string/alert_delete"
                android:textColor="#FF0033"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_complete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gl" />

            <View
                android:id="@+id/v_line_6"
                android:layout_width="0.5dp"
                android:layout_height="0dp"
                android:background="#4d4d4d"
                app:layout_constraintBottom_toBottomOf="@id/btn_delete"
                app:layout_constraintEnd_toEndOf="@+id/btn_delete"
                app:layout_constraintTop_toTopOf="@+id/btn_delete" />


            <Button
                android:id="@+id/btn_complete"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:background="@android:color/transparent"
                android:text="@string/alert_complete"
                android:textColor="@drawable/selector_todo_save"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintStart_toEndOf="@+id/btn_delete"
                app:layout_constraintTop_toBottomOf="@+id/gl" />

            <View
                android:id="@+id/v_line_7"
                android:layout_width="0.5dp"
                android:layout_height="0dp"
                android:background="#4d4d4d"
                app:layout_constraintBottom_toBottomOf="@id/btn_complete"
                app:layout_constraintEnd_toEndOf="@+id/btn_complete"
                app:layout_constraintTop_toTopOf="@+id/btn_complete" />


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:background="@android:color/transparent"
                android:text="@string/alert_cancel"
                android:textColor="#0076ff"
                android:textSize="17sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
                app:layout_constraintStart_toEndOf="@+id/btn_complete"
                app:layout_constraintTop_toBottomOf="@+id/gl" />

            <View
                android:id="@+id/v_line_3"
                android:layout_width="0.5dp"
                android:layout_height="0dp"
                android:background="#4d4d4d"
                app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:background="@android:color/transparent"
                android:text="@string/alert_save"
                android:enabled="false"
                android:textColor="@drawable/selector_todo_save"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@+id/gl" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
